feat: add: digstore

--- a/digibank/src/assets/styles/_minhaArea.scss
+++ b/digibank/src/assets/styles/_minhaArea.scss
@@ -54,7 +54,7 @@ main#minha-area {
         border-radius: $button-radius;
 
         text-decoration: none;
-        color: $text-bright-color;
+        color: $text-light-color;
         font-size: 1.5rem;
         font-weight: 500;
         background-color: $secondary-color;
@@ -85,7 +85,7 @@ main#minha-area {
           border: none;
           border-radius: $button-radius;
           padding: 30px 15px;
-          color: $text-bright-color;
+          color: $text-light-color;
           font-size: 1.5rem;
           font-weight: 500;
         }
