--- a/digibank/src/assets/styles/components/_emprestimoOptions.scss
+++ b/digibank/src/assets/styles/components/_emprestimoOptions.scss
@@ -32,7 +32,7 @@
     align-items: center;
 
     background-color: $secondary-color;
-    color: $text-bright-color;
+    color: $text-light-color;
     font-weight: 500;
 
     margin: 0 0 0 auto;
