--- a/digibank/src/assets/styles/_base.scss
+++ b/digibank/src/assets/styles/_base.scss
@@ -1,7 +1,7 @@
 $primary-color: #fff;
 $secondary-color: #c00414;
 $text-dark-color: #000;
-$text-bright-color: $primary-color;
+$text-light-color: $primary-color;
 $text-hover-color: $secondary-color;
 $hover-background: #f4f4f4;
 
