--- a/digibank/src/assets/styles/components/_cardComponent.scss
+++ b/digibank/src/assets/styles/components/_cardComponent.scss
@@ -47,7 +47,7 @@
     height: 60%;
 
     * {
-      color: $text-bright-color;
+      color: $text-light-color;
     }
 
     h2 {
@@ -78,7 +78,7 @@
 
     height: 30%;
 
-    background-color: $text-bright-color;
+    background-color: $text-light-color;
     color: $secondary-color;
 
     border: 3px solid $hover-background;
@@ -110,7 +110,7 @@
     button {
       width: 100%;
       height: 100%;
-      background-color: $text-bright-color;
+      background-color: $text-light-color;
       color: $secondary-color;
       font-weight: 500;
       font-size: 1rem;
