--- a/digibank/src/assets/styles/components/_modalTransferir.scss
+++ b/digibank/src/assets/styles/components/_modalTransferir.scss
@@ -68,7 +68,7 @@ $transition-time: 400ms;
           h3 {
             font-size: 1.1rem;
             font-weight: 500;
-            color: $text-bright-color;
+            color: $text-light-color;
           }
 
           &.saldo {
