--- a/digibank/src/assets/styles/main.scss
+++ b/digibank/src/assets/styles/main.scss
@@ -7,6 +7,7 @@
 @import 'metas';
 @import 'metaUnica';
 @import 'minhaArea';
+@import 'digiStore';
 @import './components/sideBar';
 @import './components/userInfosComponent';
 @import './components/cardComponent';
