--- a/digibank/src/assets/styles/main.scss
+++ b/digibank/src/assets/styles/main.scss
@@ -19,3 +19,4 @@
 @import './components/modalMeta';
 @import './components/modalTransferir';
 @import './components/empty';
+@import './components/post';
