--- a/digibank/src/assets/styles/_base.scss
+++ b/digibank/src/assets/styles/_base.scss
@@ -76,7 +76,7 @@ h1 {
   font-size: 1rem;
   font-weight: 500;
 
-  border: none;
+  border: 3px solid transparent;
   outline: none;
   cursor: pointer;
 
