--- a/digibank/src/assets/styles/_digiStore.scss
+++ b/digibank/src/assets/styles/_digiStore.scss
@@ -68,13 +68,14 @@ main#digistore {
   .suport-list {
     display: flex;
     flex-direction: column;
-    gap: 22px;
+    // gap: 22px;
     width: 100%;
     height: 340px;
     margin: 35px 0;
 
     h2 {
       font-weight: 500;
+      margin: 1.5rem 0;
     }
 
     .suport-carousel {
@@ -87,9 +88,11 @@ main#digistore {
         display: flex;
         justify-content: center;
         align-items: center;
-        width: 31%;
-        height: 80%;
+        width: 30%;
+        height: 14rem;
         border-radius: $button-radius;
+        animation: fadeMe 0.3s;
+        margin-bottom: 2rem;
 
         &.slim {
           width: 18%;
