--- a/digibank/src/assets/styles/_landing.scss
+++ b/digibank/src/assets/styles/_landing.scss
@@ -12,7 +12,7 @@ main#landing {
         align-items: flex-start;
 
         width: 100%;
-        margin: 11rem 0 16rem 0;
+        margin: 15vh 0 16rem 0;
 
         .leftSectionBanner {
             display: flex;
@@ -79,7 +79,7 @@ main#landing {
         justify-content: space-between;
         flex-direction: column;
         align-items: flex-start;
-        margin-bottom: 20rem;
+        margin-bottom: 15vh;
 
         width: 100%;
         height: 100%;
@@ -105,7 +105,7 @@ main#landing {
         justify-content: space-between;
         align-items: flex-start;
 
-        margin-bottom: 20rem;
+        margin-bottom: 10vh;
         height: 36.75rem;
         width: 100%;
 
@@ -242,7 +242,7 @@ main#landing {
     }
 }
 .sliderContent{
-    height: 14rem;
+    height: 10vh;
     border-radius: 10px;
     margin: 4rem 0;
 
