fix: bugs em Marketplace

--- a/digibank/src/assets/styles/_digiStore.scss
+++ b/digibank/src/assets/styles/_digiStore.scss
@@ -111,6 +111,7 @@ main#digistore {
     width: 100%;
     height: 60px;
     font-size: 1.25rem;
+    margin-top: 4rem;
     background-color: $primary-color;
     color: $secondary-color;
     border: 3px solid #c9c9c9;
