--- a/digibank/src/assets/styles/main.scss
+++ b/digibank/src/assets/styles/main.scss
@@ -20,3 +20,4 @@
 @import './components/modalTransferir';
 @import './components/empty';
 @import './components/carousel';
+@import './components/post';
