--- a/digibank/src/assets/styles/_emprestimos.scss
+++ b/digibank/src/assets/styles/_emprestimos.scss
@@ -11,13 +11,13 @@
 }
 
 *::-webkit-scrollbar-thumb {
-  background-color: #d9d9d9;
+  background-color: $border-color;
   transition: 0.7s ease;
   border-radius: 30px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background-color: #d9d9d9;
+  background-color: $border-color;
 }
 
 main#emprestimos {
@@ -33,13 +33,13 @@ main#emprestimos {
   }
 
   *::-webkit-scrollbar-thumb {
-    background-color: #d9d9d9;
+    background-color: $border-color;
     transition: 0.7s ease;
     border-radius: 30px;
   }
 
   ::-webkit-scrollbar-thumb:hover {
-    background-color: #d9d9d9;
+    background-color: $border-color;
   }
 
   section {
