--- a/digibank/src/assets/styles/_erros.scss
+++ b/digibank/src/assets/styles/_erros.scss
@@ -38,7 +38,7 @@ main#erros {
             width: 21.5rem !important;
 
             &:hover {
-                border: 3px solid #d9d9d9;
+                border: 3px solid $border-color;
                 background-color: transparent;
                 color: $secondary-color;
             }
@@ -51,7 +51,7 @@ main#erros {
             width: 21.5rem !important;
 
             &:hover {
-                border: 3px solid #d9d9d9;
+                border: 3px solid $border-color;
                 background-color: transparent;
                 color: $secondary-color;
             }
