--- a/digibank/src/assets/styles/components/_post.scss
+++ b/digibank/src/assets/styles/components/_post.scss
@@ -202,6 +202,10 @@ section.post-infos {
             margin-right: 5px;
           }
         }
+
+        .btnComentar{
+          
+        }
       }
     }
 
