--- a/digibank/src/assets/styles/main.scss
+++ b/digibank/src/assets/styles/main.scss
@@ -21,3 +21,4 @@
 @import './components/empty';
 @import './components/post';
 @import './components/carousel';
+@import './components/modalComentar';
