--- a/digibank/src/assets/styles/main.scss
+++ b/digibank/src/assets/styles/main.scss
@@ -22,3 +22,4 @@
 @import './components/post';
 @import './components/carousel';
 @import './components/modalComentar';
+@import './components/modalEfetuarTransacao';
