--- a/digibank/src/assets/styles/components/_post.scss
+++ b/digibank/src/assets/styles/components/_post.scss
@@ -90,16 +90,26 @@ main#post {
 
         #adquirir__btn {
           border: 2px solid $primary-color;
-          padding: 15px 30px;
-          font-size: 1.2rem;
-          font-weight: 500;
           border-radius: $button-radius;
           color: $text-light-color;
           background-color: transparent;
+          button {
+            width: 100%;
+            height: 100%;
+            padding: 15px 30px;
+            font-weight: 500;
+            font-size: 1.2rem;
+            color: $primary-color;
+            border: unset;
+            background-color: transparent;
+          }
 
           &:hover {
+            button {
+              color: black;
+            }
+
             background-color: $text-light-color;
-            color: black;
             transform: scale(1.1);
             border-radius: 6px;
             // box-shadow: 0 3px 7px 0px darken($hover-background, $amount: 10);
@@ -117,7 +127,7 @@ main#post {
           font-size: 1.25rem;
           color: $text-light-color;
 
-          &:hover{
+          &:hover {
             transform: scale(1.02);
             transition: all 100ms;
           }
@@ -203,8 +213,8 @@ section.post-infos {
           }
         }
 
-        .btnComentar{
-          
+        .btnComentar {
+          width: 100%;
         }
       }
     }
@@ -227,6 +237,7 @@ section.post-infos {
         .comment-settings {
           display: flex;
           align-items: center;
+          margin-left: 40px;
           gap: 10px;
 
           span {
