--- a/digibank/src/assets/styles/components/_post.scss
+++ b/digibank/src/assets/styles/components/_post.scss
@@ -143,7 +143,15 @@ main#post {
           }
         }
       }
+      .optionVendas{
+        p{
+          font-size: 1.2rem;
 
+          span{
+            font-weight: 600;
+          }
+        }
+      }
       .post-actions {
         display: flex;
         gap: 15px;
@@ -204,6 +212,34 @@ section.post-infos {
       .support-galeria-post {
         display: flex;
         gap: 50px;
+
+        .suport-carousel {
+          display: flex;
+          justify-content: space-between;
+          width: 100%;
+          height: 100%;
+    
+          .store-item {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 30%;
+            height: 14rem;
+            border-radius: $button-radius;
+            animation: fadeMe 0.3s;
+            margin-bottom: 2rem;
+    
+            &.slim {
+              width: 18%;
+            }
+    
+            img {
+              object-fit: contain;
+              width: 100%;
+              max-height: 100%;
+            }
+          }
+        }
 
         .support-img {
           // max-width: 320px;
@@ -279,9 +315,17 @@ section.post-infos {
           }
         }
       }
+    } 
+    .descricao-post{
+      display: flex;
+      flex-direction: column;
+      p {
+        font-size: 1.18rem;
+        max-width: 720px;
+      }
     }
 
-    .descricao-post {
+    .descricao-post-cad {
       display: flex;
       align-items: end;
       p {
