--- a/digibank/src/assets/styles/main.scss
+++ b/digibank/src/assets/styles/main.scss
@@ -10,6 +10,7 @@
 @import 'landing';
 @import 'minhaArea';
 @import 'digiStore';
+@import 'inventario';
 @import './components/sideBar';
 @import './components/userInfosComponent';
 @import './components/cardComponent';
