--- a/digibank/src/assets/styles/_minhaArea.scss
+++ b/digibank/src/assets/styles/_minhaArea.scss
@@ -35,6 +35,7 @@ main#minha-area {
     .right-section {
       display: flex;
       justify-content: space-between;
+      align-content: space-between;
       flex-wrap: wrap;
 
       width: 40%;
