--- a/digibank/src/assets/styles/_digiStore.scss
+++ b/digibank/src/assets/styles/_digiStore.scss
@@ -74,7 +74,7 @@ main#digistore {
     flex-direction: column;
     // gap: 22px;
     width: 100%;
-    height: 340px;
+    // height: 340px;
     margin: 35px 0;
 
     h2 {
@@ -148,6 +148,7 @@ main#digistore {
         height: 4rem;
         width: 5rem;
         border-radius: 5px;
+        object-fit: scale-down;
       }
       .labelSearch {
         font-size: 1.2rem;
