--- a/digibank/src/assets/styles/components/_carousel.scss
+++ b/digibank/src/assets/styles/components/_carousel.scss
@@ -6,12 +6,14 @@
     align-items: center;
     justify-content: space-between;
     height: 100%;
+    width: 100%;
     position: relative;
 
     .suport-carousel {
         width: 100%;
         height: 100%;
         display: flex;
+        justify-content: space-between;
         align-items: center;
 
         .btnCarousel {
