--- a/digibank/src/assets/styles/components/_post.scss
+++ b/digibank/src/assets/styles/components/_post.scss
@@ -158,16 +158,36 @@ main#post {
 
         #adquirir__btn {
           border: 2px solid $primary-color;
-          padding: 15px 30px;
+          // padding: 15px 30px;
           font-size: 1.2rem;
           font-weight: 500;
           border-radius: $button-radius;
           color: $text-light-color;
           background-color: transparent;
 
+          button {
+            width: 100%;
+            height: 100%;
+            padding: 15px 30px;
+            font-weight: 500;
+            font-size: 1.2rem;
+            color: $primary-color;
+            border: unset;
+            background-color: transparent;
+          }
+
           &:hover {
             background-color: $text-light-color;
             color: black;
+            transform: scale(1.1);
+            border-radius: 6px;
+            // box-shadow: 0 3px 7px 0px darken($hover-background, $amount: 10);
+            transition: all 100ms;
+            button {
+              color: black;
+            }
+
+            background-color: $text-light-color;
             transform: scale(1.1);
             border-radius: 6px;
             // box-shadow: 0 3px 7px 0px darken($hover-background, $amount: 10);
@@ -223,7 +243,7 @@ section.post-infos {
             display: flex;
             justify-content: center;
             align-items: center;
-            width: 30%;
+            width: 20%;
             height: 14rem;
             border-radius: $button-radius;
             animation: fadeMe 0.3s;
