feat: digistore_catalogo and refreshToken fix: transferToSameUser

--- a/digibank/src/assets/styles/main.scss
+++ b/digibank/src/assets/styles/main.scss
@@ -11,6 +11,7 @@
 @import 'minhaArea';
 @import 'digiStore';
 @import 'inventario';
+@import 'catalogo';
 @import './components/sideBar';
 @import './components/userInfosComponent';
 @import './components/cardComponent';
@@ -24,3 +25,4 @@
 @import './components/carousel';
 @import './components/modalComentar';
 @import './components/modalEfetuarTransacao';
+@import './components/recomendadosPost';
